# ptvc25-swarm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_shaders.sh  model_matrix.txt  settings.ini  sun.ini  ui_placements.ini
assets/models/: crosshair.glb  gray_quad.glb  gray_quad.gltf  grenade.glb
assets/settings/: fern_tuning.ini  ui_placements.ini  window.ini
assets/shaders_vk/: CMakeLists.txt  animation_shader.frag  animation_shader.vert  cornellGouraud.frag  cornellGouraud.vert  hud.vert  hud.vert.spv  point_light.frag.spv  point_light.vert  shadow_pass.frag  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  skybox_shader.frag  skybox_shader.vert  terrain_shader.frag  terrain_shader.vert  terrain_tess_control.tesc  terrain_tess_eval.tese  texture.frag  texture.vert  texture_shader.frag  texture_shader.vert  ui_shader.frag  ui_shader.vert  water_shader.frag  water_shader.tesc  water_shader.tese  water_shader.vert
assets/shaders_vk/crosshair/: crosshair.frag  crosshair.vert
assets/shaders_vk/hud/: hud_red.vert
assets/shaders_vk/refactor/: hud.frag  hud.frag.spv  hud.vert  hud.vert.spv  point_light.frag  point_light.vert  point_light.vert.spv  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv
assets/textures/skybox/crystallotus/: source.txt
scripts/: download_assets_and_libs.bat  download_assets_and_libs.sh
scripts/linux/: install_dependencies.sh  uninstall_dependencies.sh
src/: AudioSystem.cpp  AudioSystem.h  Camera.h  Engine.cpp  Engine.h  GameBase.h  GameObject.cpp  GameObject.h  Geometry.cpp  Geometry.h  IGame.h  Main.cpp  OldMain.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Swarm.cpp  Swarm.h  SwarmInputController.cpp  SwarmInputController.h  compile.sh  first_app.cpp  first_app.h  keyboard_menu_controller.cpp  keyboard_menu_controller.h  keyboard_movement_controller.cpp  keyboard_movement_controller.h  keyboard_placement_controller.cpp  keyboard_placement_controller.h  main.cpp  movement_controller_utils.h  vk_buffer.cpp  vk_buffer.h  vk_camera.cpp  vk_camera.h  vk_descriptors.cpp  vk_descriptors.h  vk_device.h  vk_frame_info.h  vk_game_object.cpp  (+9 more)
src/asset_utils/: AssetLoader.cpp  AssetLoader.h  AssetManager.h
src/assets/: AnimatedModel.h
src/camera/: Camera.cpp  Camera.h  CameraUtils.cpp  CameraUtils.h  CharacterCamera.cpp  CharacterCamera.h  FPVCamera.cpp  FPVCamera.h
src/geometry/: Geometry.cpp  Geometry.h  Terrain.h
src/lighting/: Light.h  PointLight.cpp  PointLight.h  Sun.cpp  Sun.h
src/logical_systems/: Settings.h
src/logical_systems/input/: IInputController.h  InputManager.cpp  InputManager.h
src/procedural/: FernParameterTuner.cpp  FernParameterTuner.h  LSystem.cpp  LSystem.h  SimpleGameObject.h  TreeMaterial.cpp  TreeMaterial.h  VegetationIntegrator.cpp  VegetationIntegrator.h  VegetationObject.cpp  VegetationObject.h  VegetationSharedResources.h
src/refactor/: compile.sh  first_app.cpp  first_app.h  keyboard_movement_controller.cpp  keyboard_movement_controller.h  simple_render_system.cpp  simple_render_system.h  vk_buffer.h  vk_camera.cpp  vk_camera.h  vk_device.cpp  vk_device.h  vk_frame_info.h  vk_game_object.cpp  vk_game_object.h  vk_model.cpp  vk_model.h  vk_pipeline.cpp  vk_pipeline.h  vk_renderer.cpp  vk_renderer.h  vk_swap_chain.cpp  vk_swap_chain.h  vk_window.cpp  vk_window.h
src/refactor/shaders/: simple_shader.frag  simple_shader.vert
src/refactor/systems/: cross_hair_system.cpp  hud_system.cpp  point_light_system.cpp  point_light_system.h  simple_render_system.cpp  simple_render_system.h
src/rendering/: ShadowMap.cpp  ShadowMap.h
src/rendering/materials/: CubemapMaterial.cpp  CubemapMaterial.h  Material.cpp  Material.h  StandardMaterial.cpp  StandardMaterial.h  TessellationMaterial.cpp  TessellationMaterial.h  TextureUtils.cpp  TextureUtils.h  UIMaterial.cpp  UIMaterial.h  WaterMaterial.cpp  WaterMaterial.h  tessellation_support_instructions.md
src/rendering/render_systems/: BaseRenderSystem.h  TerrainRenderSystem.cpp  TerrainRenderSystem.h  TextureRenderSystem.cpp  TextureRenderSystem.h  UIRenderSystem.cpp  UIRenderSystem.h  WaterRenderSystem.cpp  WaterRenderSystem.h  terrain_render_system.cpp  terrain_render_system.h  tessellation_render_system.cpp  tessellation_render_system.h  texture_render_system.cpp  texture_render_system.h  ui_render_system.cpp  ui_render_system.h  water_render_system.cpp  water_render_system.h
src/rendering/structures/: Frustum.h  Skybox.cpp  Skybox.h  WaterObject.cpp  WaterObject.h
src/scene/: ISceneManagerInteraction.h  SceneManager.cpp  SceneManager.h
src/simulation/: CollisionHandler.cpp  CollisionHandler.h  CollisionSettings.cpp  CollisionSettings.h  PhysicsConversions.cpp  PhysicsConversions.h  PhysicsSimulation.cpp  PhysicsSimulation.h  PhysicsUtils.cpp  PhysicsUtils.h  Scene.h
src/simulation/entities/: entity.h
src/simulation/entities/actors/: actor.h
src/simulation/objects/: IPhysicsEntity.h  ManagedPhysicsEntity.cpp  ManagedPhysicsEntity.h  PhysicsEntity.cpp  PhysicsEntity.h
src/simulation/objects/actors/: DebugPlayer.cpp  DebugPlayer.h  PhysicsPlayer.cpp  PhysicsPlayer.h  Player.cpp  Player.h
src/simulation/objects/dynamic/: Bullet.h  (+3 more)
src/systems/: animation_render_system.cpp  animation_render_system.h  cross_hair_system.cpp  cross_hair_system.h  hud_system.cpp  hud_system.h  point_light_system.cpp  point_light_system.h  simple_render_system.cpp  simple_render_system.h  tessellation_render_system.cpp  tessellation_render_system.h  texture_render_system.cpp  texture_render_system.h  ui_render_system.cpp  ui_render_system.h  water_render_system.cpp  water_render_system.h
src/ui/: Font.cpp  Font.h  TextComponent.cpp  TextComponent.h  UIComponent.cpp  UIComponent.h
src/vk/: vk_buffer.cpp  vk_buffer.h  vk_descriptors.cpp  vk_descriptors.h  vk_destruction_queue.cpp  vk_destruction_queue.h  vk_device.cpp  vk_device.h  vk_frame_info.h  vk_model.cpp  vk_model.h  vk_pipeline.cpp  vk_pipeline.h  vk_renderer.cpp  vk_renderer.h  vk_swap_chain.cpp  vk_swap_chain.h  vk_utils.hpp  vk_window.cpp  vk_window.h
(+8 files in other folders)
